// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders an animated icon 1`] = `
<Image
  accessibilityRole="image"
  collapsable={false}
  source={
    Object {
      "uri": "mock.png",
    }
  }
  style={
    Object {
      "height": undefined,
      "resizeMode": "contain",
      "tintColor": undefined,
      "width": undefined,
    }
  }
  testID="iconTestID"
/>
`;

exports[`Icon renders as expected 1`] = `
<Image
  accessibilityRole="image"
  source={
    Object {
      "uri": "mock.png",
    }
  }
  style={
    Array [
      Object {
        "height": undefined,
        "resizeMode": "contain",
        "tintColor": undefined,
        "width": undefined,
      },
      undefined,
    ]
  }
  testID="iconTestID"
/>
`;

exports[`Icon renders as expected with custom styles 1`] = `
<Image
  accessibilityRole="image"
  source={
    Object {
      "uri": "mock.png",
    }
  }
  style={
    Array [
      Object {
        "height": undefined,
        "resizeMode": "contain",
        "tintColor": undefined,
        "width": undefined,
      },
      Object {
        "tintColor": "red",
      },
    ]
  }
  testID="iconTestID"
/>
`;
